# boolean

./: AUTHORS  README.md  boolean.cabal  tuura-boolean.cabal
src/Tuura/: Boolean.hs  SelfDual.hs
src/Tuura/Boolean/: Parser.hs
