name:          boolean
version:       0.0.1
synopsis:      Boolean manipulation
license:       BSD3
license-file:  LICENSE
author:        Tuura authors (see AUTHORS file)
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Tuura authors (see AUTHORS file), 2015
homepage:      https://github.com/tuura/boolean
category:      Hardware
build-type:    Simple
cabal-version: >=1.10

source-repository head
    type:     git
    location: https://github.com/tuura/boolean.git

library
    hs-source-dirs:   src
    exposed-modules:  Tuura.Boolean.Parser,
                      Tuura.Boolean
    build-depends:    base >= 4.8 && < 5,
                      bifunctors <5.4 || >5.4,
                      containers == 0.5.*,
                      mtl == 2.2.*,
                      hint >= 0.6.0,
                      transformers >= 0.4 && < 0.6,
                      extra >= 1.4.10,
                      text >= 1.2.2,
                      directory >= 1.2.2,
                      parsec,
                      pretty
    default-language: Haskell2010
    other-extensions: TypeFamilies
    GHC-options:      -Wall -fwarn-tabs
